[package]
name = "rem-bash"
version = "0.2.2"
edition = "2018"
authors = ["Hilmar Wiegand <me@hwgnd.de>"]
description = "Remote bash script execution and library import"
default-run = "rem"
license = "MIT"

[[bin]]
name = "rem"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
clap = "3.0.0-beta.4"
toml = "0.5"
dirs = "1.0"
url = "2.2"
urlencoding = "2.1"
typetag = "0.1"
regex = "1.5"
lazy_static = "1.4.0"
